traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:4: error: Missing closing brace `}' assumed here
def isPair(nb):Boolean={
^TraversalZigZag:4: error: expected class or object definition
def isPair(nb):Boolean={
^TraversalZigZag:11: error: expected class or object definition
def avanceCrois(){
^